--- a/issBlueMetal/Views/Shared/_Layout.cshtml
+++ b/issBlueMetal/Views/Shared/_Layout.cshtml
@@ -337,7 +337,7 @@
                             <a class="waves-effect waves-cyan " href="~/AccountGroups/Index"><i class="material-icons">group_add</i><span class="menu-title" data-i18n="Calendar">Account Group</span></a>
                         </li>
                         <li class="bold">
-                            <a class="waves-effect waves-cyan " href="~/AcLedgers/Index"><i class="material-icons">person_outline</i><span class="menu-title" data-i18n="Calendar">Account ledger</span></a>
+                            <a class="waves-effect waves-cyan " href="~/AcLedgers/Index"><i class="material-icons">person_outline</i><span class="menu-title" data-i18n="Calendar">Account Ledger</span></a>
                         </li>
                     </ul>
                 </div>
@@ -348,7 +348,7 @@
                 <div class="collapsible-body">
                     <ul class="collapsible collapsible-sub" data-collapsible="accordion">
                         <li class="bold">
-                            <a class="waves-effect waves-cyan " href="~/RawMateriyalPurchases/Index"><i class="material-icons">add_shopping_cart</i><span class="menu-title" data-i18n="eCommerce">Raw Material Inword</span></a>
+                            <a class="waves-effect waves-cyan " href="~/RawMateriyalPurchases/Index"><i class="material-icons">add_shopping_cart</i><span class="menu-title" data-i18n="eCommerce">Raw Material Inward</span></a>
 
                         </li>
                         <li class="bold">
@@ -380,7 +380,13 @@
                             <a class="waves-effect waves-cyan " href="~/Report/SupplierLedger"><i class="material-icons">sentiment_satisfied</i><span class="menu-title" data-i18n="Calendar">Supplier Ledger</span></a>
                         </li>
                         <li class="bold">
+                            <a class="waves-effect waves-cyan " href="~/Report/SupplierConsolidate"><i class="material-icons">sentiment_satisfied</i><span class="menu-title" data-i18n="Calendar">Supplier Consolidate</span></a>
+                        </li>
+                        <li class="bold">
                             <a class="waves-effect waves-cyan " href="~/Report/CustomerLedger"><i class="material-icons">remove_red_eye</i><span class="menu-title" data-i18n="Calendar">Customer Ledger</span></a>
+                        </li>
+                        <li class="bold">
+                            <a class="waves-effect waves-cyan " href="~/Report/CustomerConsolidate"><i class="material-icons">remove_red_eye</i><span class="menu-title" data-i18n="Calendar">Customer Consolidate</span></a>
                         </li>
                         <li class="bold">
                             <a class="waves-effect waves-cyan " href="~/Report/PaymentReport"><i class="material-icons">featured_play_list</i><span class="menu-title" data-i18n="Calendar">Payment Report</span></a>
