--- a/issBlueMetal/Views/Report/SupplierConsolidate.cshtml
+++ b/issBlueMetal/Views/Report/SupplierConsolidate.cshtml
@@ -3,18 +3,9 @@
 @{
     ViewBag.Title = "SupplierConsolidate";
 }
-
-
-
-
-
-
 <link href="//cdn.datatables.net/1.10.15/css/jquery.dataTables.min.css" rel="stylesheet" />
-
 <link href="https://cdn.datatables.net/1.11.2/css/jquery.dataTables.min.css" rel="stylesheet" type="text/css" />
 <link href="https://cdn.datatables.net/buttons/2.0.0/css/buttons.dataTables.min.css" rel="stylesheet" type="text/css" />
-
-
 <style>
     .dataTables_wrapper {
         position: relative;
@@ -22,30 +13,22 @@
         padding: 2% !important;
     }
 </style>
-
-
 <div class="container">
     <div>
         <h5 style="text-align: center">Supplier Consolidate </h5>
-
     </div>
 </div>
     <div class="row">
         <div class="col s1">
         </div>
-       
-
-       
         <div class="col s2 card card-header info">
             <label>  From Date :</label>
             <input type="date" name="fromDate" class="form-control daterange-single" id="fromdate">
         </div>
-
         <div class="col s1">
         </div>
         <div class="col s2 card card-header info">
             <label>  To Date :</label>
-
             <input type="date" class="form-control" name="toDate" format="dd-MM-yyyy" id="todate" />
         </div>
         <div class="col s2">
@@ -53,21 +36,15 @@
                 Search
                 <i class="material-icons right"></i>
             </button>
-
         </div>
     </div>
-
 <br />
-
 <div class="col s12" style="margin:1%">
     <div class="card">
-
-
         <div class="dt_colVis_buttons"></div>
         <table style="width:100%" id="supplier">
             <thead>
                 <tr>
-
                     <th>Id</th>
                     <th>Name</th>
                     <th>Address</th>
@@ -75,22 +52,13 @@
                     <th>Amount</th>
                 </tr>
             </thead>
-            <tbody id="tblSupplierLedger">
-               
-            </tbody>
-            <tfoot>
-               
-            </tfoot>
+            <tbody id="tblSupplierLedger">              
+            </tbody>  
         </table>
-
-
     </div>
 </div>
-
 <script>
-
     $(function () {
-
         $('#btnsearch').click(function () {
             var formatDate = $('#fromdate').val().split('-');
             var formatToDate = $('#todate').val().split('-');
@@ -103,7 +71,6 @@
                 alert("Please Select the FormatDate and ToDate ")
             }
         });
-
     });
     function Advance(fromDate, toDate) {
         $("#tblSupplierLedger").empty();
@@ -114,50 +81,42 @@
             data: { fromDate: fromDate, toDate: toDate, },
             success: function (data) {
                 if (data != "Faild") {
-                    //var data = JSON.parse(result);
+                    var row;
                    
                    
-                var row;
-               
                     let sNo = 1;
-                if (data.length>0) {
+                    if (data.length > 0) {
                     for (var i = 0; i < data.length; i++) {
                         var tempData = {};
+                        if (data[i].Supplier.name != null) { tempData.name = data[i].Supplier.name; } else tempData.name = "";
+                        if (data[i].Supplier.address != null) { tempData.address = data[i].Supplier.address; } else tempData.address = "";
+                        if (data[i].materialName != null) { tempData.materialName = data[i].materialName.name; } else tempData.materialName = "";
+                        if (data[i].netAmount != null) { tempData.netAmount = data[i].netAmount; } else tempData.netAmount = "";
 
-
-                        if (data[i][0].Supplier.name != null) { tempData.name = data[i][0].Supplier.name; } else tempData.name = "";
-                        if (data[i][0].Supplier.address != null) { tempData.address = data[i][0].Supplier.address; } else tempData.address = "";
-                        if (data[i][0].materialName != null) { tempData.materialName = data[i][0].materialName.name; } else tempData.materialName = "";
-                        if (data[i][0].netAmount != null) { tempData.netAmount = data[i][0].netAmount; } else tempData.netAmount = "";
 
                         row = '<tr>';
                         row += "<td>" + sNo + "</td>"
                         row += '<td>' + tempData.name + '</td>'
                         row += '<td>' + tempData.address + '</td>'
                         row += '<td>' + tempData.materialName + '</td>'
-                        row += '<td>' + tempData.netAmount + '</td>'
-
-
+                        row += '<td>' + tempData.netAmount + '</td>'                   
                         row += '</tr>';
                         $('#tblSupplierLedger').append(row);
-                       
                         sNo++;
-
                     }
-                }
+                    }
+                    console.log(tempData);
+                   
                 }
                 else {
                 alert("Somthing went wrong please try again.");
             }
-
             },
             error: function (err) {
                 console.log(err);
             }
         });
     }
-
-
 </script>
 
 
